# simple-spectral

./: .gitignore  CMakeLists.txt
cmake/: FindGLM.cmake
src/: main.cpp  material.cpp  material.hpp  renderer.cpp  renderer.hpp  scene.cpp  spectrum.cpp  spectrum.hpp  stdafx.hpp
src/util/: color.cpp  color.hpp
